@@ -1,4 +1,4 @@
-svset, bvset, ...: parameter sollten sein: sequence, newvalue, index
+svset, sbvset, ...: parameter sollten sein: sequence, newvalue, index
 -> wenn index der letzte parameter ist, dann kann man leicht auf mehrere arraydimensionen erweitern,
    bzw. ein allenfalls kommendes aset wäre (aset array newvalue index1 index2...)
 
