@@ -37,7 +37,7 @@ mlib provides the following Common Lisp-like functions and macros:
     - [push](#macro-push), [pop](#macro-pop)
 - numbers, characters
     - [abs](#function-abs), [zerop](#function-zerop), [evenp](#function-evenp), [oddp](#function-oddp)
-    - [char=](#function-char), [char](#function-char-1)
+    - [char=](#function-char), [char](#function-char-1), [sbit](#function-sbit)
     - [equal](#function-equal)
 - sequences
     - [length](#function-length)
@@ -550,6 +550,13 @@ Return `t` if all of the arguments are the same character.
 Since: 1.1
 
 Return the n-th character of the string `str`, `n` is 0-based.
+
+### Function: sbit
+    (sbit sbv n) -> nth bit
+
+Since: 1.3
+
+Return the n-th bit of the simple bitvector `sbv`, `n` is 0-based.
 
 ### Function: equal
     (equal a b) -> boolean
