@@ -19,10 +19,11 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    * make-array, vector, vector-length, vectorp, simple-vector-p, svref, svset and svlength
    * list->simple-vector and simple-vector->list
  * added bitvector support:
-   * simple-vector-p, sbit, bvset, bvlength and bv=
+   * simple-bit-vector-p, sbvref (similar to CL sbit), sbvset, sbvlength and sbv=
    * list->simple-bit-vector and simple-bit-vector->list
  * added sref (identical to CL char)
 
+ * mlib: added sbit
  * mlib: added map, dovector, revappend, nreconc, nreverse, typecase
  * mlib: added generator related functions and macros
    * scan
